# argos

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  dprint.json  justfile  main.py  pyproject.toml
.claude/skills/argos-sync-docs/: SKILL.md
.claude/skills/speckit-argos-pr-review/: SKILL.md
.claude/skills/speckit-argos-remediate/: SKILL.md
.claude/skills/speckit-argos-sync-docs/: SKILL.md
.claude/skills/speckit-pr-review/: SKILL.md
.claude/skills/speckit-remediate/: SKILL.md
.claude/skills/speckit-sync-docs/: SKILL.md
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/extensions/argos/: extension.yml
.specify/extensions/argos/commands/: speckit.argos.pr-review.md  speckit.argos.remediate.md  speckit.argos.sync-docs.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
.specify/workflows/: workflow-registry.json
.specify/workflows/speckit/: workflow.yml
docs/: ROADMAP.md
docs/product/: ARGOS_PRODUCT_VISION.md  ARGOS_V01_IDEA.md
examples/: basic_policy.rs
prompts/: README.md
scripts/: check-sensitive-data.sh  sync-extension-registry.py
specs/001-mcp-proxy-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-proxy-mvp/checklists/: requirements.md
specs/001-mcp-proxy-mvp/contracts/: audit-log.md  cli.md  library-api.md  policy-format.md
src/: error.rs  lib.rs  main.rs  verify.rs
src/audit/: mod.rs  types.rs  writer.rs
src/cli/: mod.rs
src/policy/: engine.rs  loader.rs  mod.rs  types.rs
src/proxy/: mod.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: audit_chain.rs  http_proxy.rs  policy_engine.rs  stdio_proxy.rs
tests/python/: test_sync_extension_registry.py
