[package]
name = "argos"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "AGPL-3.0-or-later"
description = "MCP security proxy — capability policy enforcement and tamper-evident audit logging"
repository = "https://github.com/ogil109/argos"
readme = "README.md"
keywords = ["mcp", "security", "proxy", "policy", "audit"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "argos-proxy"
path = "src/main.rs"

[[bin]]
name = "mock_mcp_server"
path = "src/bin/mock_mcp_server.rs"
test = false
doc = false

[lib]
name = "argos"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
globset = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
http = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1"
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1

# Dev tools — install with: cargo install <name> --version <version>
[package.metadata.tools]
dprint = "0.54.0"
