[project]
name = "argos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "specify-cli>=1.0.0,<2.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "commitizen>=4.0.0,<5.0.0",
]

[tool.uv.sources]
specify-cli = { git = "https://github.com/github/spec-kit.git", rev = "main" }
